crates/formatter/tests/snapshots/snapshots__coder__migrations__000476_chat_pin_order_constraints.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Defensive: fix any existing violating rows before adding constraints.
update chats
set pin_order = 0
where pin_order > 0 and parent_chat_id is not null;

update chats set pin_order = 0 where pin_order > 0 and archived = true;

alter table chats
	add constraint chats_pin_order_parent_check
		check (pin_order = 0 or parent_chat_id is null);

alter table chats
	add constraint chats_pin_order_archived_check
		check (pin_order = 0 or archived = false);
