crates/formatter/tests/snapshots/snapshots__coder__migrations__000477_chat_auto_archive.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists idx_chats_auto_archive_candidates;
