crates/formatter/tests/snapshots/snapshots__coder__migrations__000477_chat_auto_archive.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Partial index matching the AutoArchiveInactiveChats WHERE clause so
-- dbpurge can skip the bulk of archived / pinned / child chats.
-- The status predicate lives in the query, not the index, because
-- enum values added by earlier migrations cannot be referenced in
-- index predicates within the same transaction batch.
create index if not exists idx_chats_auto_archive_candidates
	on chats (created_at)
	where archived = false and pin_order = 0 and parent_chat_id is null;
