crates/formatter/tests/snapshots/snapshots__coder__migrations__000480_chat_auto_archive_notification_template.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
delete from notification_templates
where id = '764031be-4863-4220-867b-6ce1a1b7a5f5';
