crates/formatter/tests/snapshots/snapshots__coder__migrations__000481_user_secret_audit.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- no-op because resource_type enum values cannot be removed safely.
