crates/formatter/tests/snapshots/snapshots__coder__migrations__000483_drop_tailnet_notify_triggers.up.snap
---
source: crates/formatter/tests/snapshots.rs
assertion_line: 30
expression: formatted
---
drop trigger if exists tailnet_notify_peer_change on tailnet_peers;
drop trigger if exists tailnet_notify_tunnel_change on tailnet_tunnels;
drop trigger if exists tailnet_notify_coordinator_heartbeat on tailnet_coordinators;
drop function IF exists tailnet_notify_peer_change();
drop function IF exists tailnet_notify_tunnel_change();
drop function IF exists tailnet_notify_coordinator_heartbeat();
