crates/formatter/tests/snapshots/snapshots__coder__migrations__000484_mcp_user_oidc_auth.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Rolling this migration back deletes any rows using the user_oidc auth
-- type because they would otherwise violate the restored CHECK constraint.
delete from mcp_server_configs where auth_type = 'user_oidc';

alter table mcp_server_configs
	drop constraint mcp_server_configs_auth_type_check;

alter table mcp_server_configs
	add constraint mcp_server_configs_auth_type_check
		check (auth_type in ('none', 'oauth2', 'api_key', 'custom_headers'));
