crates/formatter/tests/snapshots/snapshots__coder__migrations__000486_user_secrets_telemetry_lock.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Restore the previous telemetry_locks event_type constraint. Existing
-- user_secrets_summary rows must be removed first or the new constraint
-- check would fail.
delete from telemetry_locks where event_type = 'user_secrets_summary';

alter table telemetry_locks
	drop constraint telemetry_lock_event_type_constraint;
alter table telemetry_locks
	add constraint telemetry_lock_event_type_constraint
		check (
			event_type in ('aibridge_interceptions_summary', 'boundary_usage_summary')
		);
