crates/formatter/tests/snapshots/snapshots__coder__migrations__000486_user_secrets_telemetry_lock.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Add user_secrets_summary to the telemetry_locks event_type constraint.
-- User secrets aggregates do not have a natural per-row UUID for the
-- telemetry server to dedupe on, so we elect a single replica per
-- snapshot period to report them via this lock table.
alter table telemetry_locks
	drop constraint telemetry_lock_event_type_constraint;
alter table telemetry_locks
	add constraint telemetry_lock_event_type_constraint
		check (
			event_type in (
				'aibridge_interceptions_summary',
				'boundary_usage_summary',
				'user_secrets_summary'
			)
		);
